--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -166,8 +166,8 @@ jobs:
       - name: Import Signing Certificate
         run: echo "${{ secrets.APPLE_CERTIFICATE }}" | tr -d '\n' | base64 -D > certificate.p12
 
-      # - name: Set Keychain Settings
-      #   run: security set-keychain-settings -lut 7200 login.keychain-db
+      - name: Set Keychain Settings
+        run: security set-keychain-settings -lut 7200 login.keychain-db
 
       # - name: Unlock Keychain
       #   run: security unlock-keychain -p mysecretpassword login.keychain-db
@@ -176,13 +176,13 @@ jobs:
       #   run: |
       #     security set-key-partition-list -S apple-tool:,apple: -s -k mysecretpassword login.keychain-db
 
-      - name: Set up Keychain
-        run: |
-          # security create-keychain -p ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
-          # security import certificate.p12 -k ~/Library/Keychains/login.keychain-db -P ${{ secrets.KEYCHAIN_PASSWORD }} -T /usr/bin/codesign
-          security set-keychain-settings -lut 7200 login.keychain-db
-          security unlock-keychain -p ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
-          security set-key-partition-list -S apple-tool:,apple: -s -k ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
+      # - name: Set up Keychain
+      #   run: |
+      #     # security create-keychain -p ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
+      #     # security import certificate.p12 -k ~/Library/Keychains/login.keychain-db -P ${{ secrets.KEYCHAIN_PASSWORD }} -T /usr/bin/codesign
+      #     security set-keychain-settings -lut 7200 login.keychain-db
+      #     # security unlock-keychain -p ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
+      #     # security set-key-partition-list -S apple-tool:,apple: -s -k ${{ secrets.KEYCHAIN_PASSWORD }} login.keychain-db
 
       - name: Install Appium
         run: |
