--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Android Automation Test
-    runs-on: macos-13
+    runs-on: macos-latest
     # strategy:
     #   matrix:
     #     api-level: [29, 30, 31, 32, 33]
